--- a/index.html
+++ b/index.html
@@ -57,41 +57,49 @@
       <div class="container">
         <h2 class="text-center">Explore Foods</h2>
         
+        <a href="#">
         <div class="box-3 float-container">
-          <img src="/images/cata-pizza4.jpg" alt="pizza" class="img-responsive img-curve">
-
+          <img src="/images/cata-pizza4.jpg" alt="pizza" class="img-responsive img-curve">        
           <h3 class="float-text text-white">Pizza</h3>
         </div>
+        </a>
 
+        <a href="#">
         <div class="box-3 float-container">
           <img src="/images/cata-burger1.jpg" alt="pizza" class="img-responsive img-curve">
 
           <h3 class="float-text text-white">Burger</h3>
         </div>
+        </a>
 
+        <a href="#">
         <div class="box-3 float-container">
           <img src="/images/cata-habesha3.jpg" alt="pizza" class="img-responsive img-curve">
-
           <h3 class="float-text text-white">Ehiopian</h3>
         </div>
+        </a>
+
+        <a href="#">
         <div class="box-3 float-container">
           <img src="/images/cata-dessert.jpg" alt="pizza" class="img-responsive img-curve">
-
           <h3 class="float-text text-white">Dessert</h3>
         </div>
+        </a>
 
+        <a href="#">
         <div class="box-3 float-container">
           <img src="/images/cata-drink4.jpg" alt="pizza" class="img-responsive img-curve">
-
-          <h3 class="float-text text-white">Drinks</h3>
+        <h3 class="float-text text-white">Drinks</h3>
         </div>
+        </a>
 
+
+        <a href="#">
         <div class="box-3 float-container">
           <img src="/images/cata-grilled.jpg" alt="pizza" class="img-responsive img-curve">
-
           <h3 class="float-text text-white">BBQ</h3>
         </div>
-
+        </a>
 
         <div class="clear-fix"></div>
 
