--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
           </div>
 
           <div class="food-menu-description">
-            <h4>Full chicken</h4>
-            <p class="food-price">1000 BIRR</p>
+            <h4>Full fried chicken</h4>
+            <p class="food-price">1800 BIRR</p>
             <p class="food-detail">Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
             <br>
             
@@ -288,12 +288,12 @@
 
         <div class="food-menu-box">
           <div class="food-menu-img">
-            <img src="/images/menupizza1.jpg" alt="peparoni pizza" class="img-responsive img-curve">
+            <img src="/images/half-fried-chocken.jpg" alt="half chicken" class="img-responsive img-curve">
           </div>
 
           <div class="food-menu-description">
-            <h4>food title</h4>
-            <p class="food-price">100 BIRR</p>
+            <h4>Half fried chicken</h4>
+            <p class="food-price">900 BIRR</p>
             <p class="food-detail">Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
             <br>
             
